Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
In ReactOS 0.4.15 rev 21e30f3, selecting the option "Use the following method to smooth edges of screen fonts" is not saved when using desktop properties. However, if I manually set its associated registry key, the setting is saved and the checkbox is selected.
In Windows Server 2003, this setting works as expected.